[package]
name = "rstoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
syn = { version = "2.0.99", default-features = false, features = ["full", "parsing", "printing", "extra-traits"] }
