[package]
name = "rstoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
futures-concurrency = "7.6.3"
macro_rules_attribute = "0.2.0"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
smol = "2.0.2"
smol-macros = "0.1.1"
syn = { version = "2.0.99", default-features = false, features = ["full", "parsing", "printing", "extra-traits"] }
